--- a/_posts/0000-01-02-Sachidanand951.md
+++ b/_posts/0000-01-02-Sachidanand951.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Feeling motivated
+~Feeling motivated~ "Fuck motivation, stay disciplined"
 Use the left arrow to go back!
